--- a/dotnet-core-lts-sdks/dockerfile
+++ b/dotnet-core-lts-sdks/dockerfile
@@ -7,3 +7,4 @@ RUN wget -O dotnet.tar.gz https://dotnetcli.blob.core.windows.net/dotnet/Sdk/2.1
     && rm dotnet.tar.gz
 
 RUN apk add git
+RUN apk add docker-cli
