--- a/dotnet-core-lts-sdks/2/dockerfile
+++ b/dotnet-core-lts-sdks/2/dockerfile
@@ -7,3 +7,10 @@ RUN wget -O dotnet.tar.gz https://dotnetcli.blob.core.windows.net/dotnet/Sdk/2.1
     && rm dotnet.tar.gz
 
 RUN apk update && apk add git && apk add docker-cli
+
+# Workaround for https://github.com/grpc/grpc/issues/18428
+# Also see https://github.com/sgerrand/alpine-pkg-glibc
+RUN apk update && apk --no-cache add ca-certificates wget
+RUN wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub
+RUN wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.30-r0/glibc-2.30-r0.apk
+RUN apk add glibc-2.30-r0.apk
